stylesheets/general-styling.css
:root {
  --theme-color: rgb(169, 71, 255);
  --lightest-color: 245, 245, 245;
  --darkest-color: 15, 15, 15;
  --darker-main: 25, 25, 25;
  --lighter-main: 45, 45, 45;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-size: 20px;
  font-family: "Roboto Condensed", sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  display: grid;
  grid-template-areas: "header main main main" "header main main main" "header main main main" "footer footer footer footer";
  grid-template-columns: 150px repeat(3, auto);
  grid-template-rows: auto auto auto 1fr;
  min-height: 100vh;
}

nav ul {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-content: space-evenly;
  list-style-type: none;
}

.nav-link {
  background-color: rgba(var(--darkest-color));
  width: 100%;
  text-align: center;
}

.nav-link a {
  padding: 1rem;
  color: rgb(var(--lightest-color));
  text-decoration: none;
  display: block;
  width: 100%;
  height: 100%;
  font-size: 1rem;
}

.selected a {
  color: var(--theme-color);
  font-weight: bold;
}

.colored {
  color: var(--theme-color);
}

.nav-link:hover,
.nav-link:focus,
.nav-link:hover a,
.nav-link:focus a {
  background-color: rgb(var(--lighter-main));
  color: var(--theme-color);
}

header nav ul {
  grid-template-columns: repeat(1, 1fr);
}

header {
  grid-area: header;
  background-color: rgb(var(--darkest-color));
}

header .nav-link {
  border-bottom: 2px solid rgb(var(--darker-main));
}

footer .nav-link {
  border-left: 2px solid rgb(var(--darker-main));
}

footer .nav-link:first-child {
  border: none;
}

main {
  padding: 1rem;
  background: radial-gradient(rgb(var(--lighter-main)), rgb(var(--darker-main)));
  position: relative;
}

h1 {
  font-size: 3rem;
  border-bottom: 2px solid var(--theme-color);
  width: 50%;
  margin: 2rem auto;
}

.introduction-information h1 {
  width: 100%;
  border: none;
}

h2 {
  font-size: 1.5rem;
}

main {
  grid-area: main;
  text-align: center;
  background-color: rgb(var(--darker-main));
  color: rgb(var(--lightest-color));
}

footer {
  grid-area: footer;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(var(--darkest-color));
  gap: 1rem;
}

footer > * {
  width: 100%;
}

.contact-information {
  color: rgba(var(--lightest-color), 0.5);
  text-align: center;
}

.contact-information div {
  display: flex;
  text-align: center;
  justify-content: center;
}

.contact-information div p {
  text-align: center;
  border-left: 2px solid rgb(var(--darker-main));
  padding: 0 0.2rem;
}

.contact-information div p:first-child {
  border: none;
}

.contact-information * {
  font-size: 0.75rem;
}

.inactive {
  opacity: 0;
}

.active {
  animation: bounceIn 1s forwards;
}

.home-container h1 .colored {
  font-size: inherit;
}

.introduction-information {
  background-color: rgb(var(--lighter-main));
  background: url(../images/image0.jpg) no-repeat;
  border-radius: 2rem;

  background-size: cover;

  padding: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  color: rgb(var(--lightest-color));
  aspect-ratio: 1 / 1;
}

.introduction-information div {
  background-color: rgba(var(--darkest-color), 0.75);
  border-radius: 2rem;
  padding: 1rem;
}

.abilities {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  text-align: left;
  padding: 1rem;
  gap: 1rem;
}

.ability {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  background-color: rgb(var(--darkest-color));
  border-radius: 1rem;
  padding: 0.5rem;
}

.abilities i {
  font-size: 1.2rem;
}

.abilities h3 {
  margin-bottom: 0.2rem;
  font-size: 1rem;
}
.abilities p {
  font-size: 0.8rem;
  color: rgba(var(--lightest-color), 0.75);
}

.about-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.about-me p,
h2 {
  margin-bottom: 1rem;
}

.about-me {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.about-me img {
  width: 20vw;
  display: block;
  border-radius: 2rem;
}

.skill-bar-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
}

.skill-bar {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-height: 3rem;
  padding: 0.8rem;
  background-color: rgb(var(--lighter-main));
  position: relative;
  border-radius: 2rem;
}

.active .skill-bar-color {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  background-color: var(--theme-color);
  border-radius: 2rem;
  animation: expandWidth 2s ease-in-out forwards;
}

@keyframes expandWidth {
  0% {
    width: 20%;
  }
  100% {
    width: 100%;
  }
}

.skill-bar:nth-child(1) .skill-bar-color {
  max-width: 90%;
}
.skill-bar:nth-child(2) .skill-bar-color {
  max-width: 80%;
}
.skill-bar:nth-child(3) .skill-bar-color {
  max-width: 65%;
}
.skill-bar:nth-child(4) .skill-bar-color {
  max-width: 85%;
}

.skill-bar h3 {
  text-align: center;
  position: relative;
  z-index: 1;
}

.skills ul {
  text-align: left;
  list-style-position: inside;
  margin-bottom: 1rem;
}

.skills li {
  padding: 0.3rem;
}

.skills {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
}

.skills section {
  background-color: rgba(var(--darkest-color), 0.75);
  padding: 2rem;
  border-radius: 2rem;
}

.skills h2 {
  margin-bottom: 1rem;
}

h3 {
  font-size: 1.2rem;
}
h4 {
  font-size: 1rem;
}

.skills h3,
.skills h4 {
  text-align: left;
}

.card-section {
  display: flex;
  flex-direction: column;

  text-align: center;
  justify-content: space-around;
  align-items: center;
  color: rgb(var(--lightest-color));
  padding-top: 1rem;
}

.card-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  height: 40vw;
}

.card {
  position: absolute;
  width: 30vw;
  transition: transform 0.8s ease-out;
}

.card img {
  width: 100%;
}

@keyframes fadeIn {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  30% {
    opacity: 0;
    transform: scale(0);
  }
  60% {
    opacity: 0;
    transform: scale(0);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

.fade-in-animation {
  animation: fadeIn 1s;
}

.card:nth-of-type(1) {
  transform: translateX(6%) rotate(6deg);
}

.card:nth-of-type(2) {
  transform: translateX(2%) rotate(-5deg);
}

.card:nth-of-type(3) {
  transform: translateX(-2%) rotate(3deg);
}

.card:nth-of-type(4) {
  transform: translateX(6%) rotate(10deg);
}

.card-container:hover > .card:nth-of-type(1),
.card-container:focus > .card:nth-of-type(1) {
  transform: translate(75%, 10%) rotate(15deg);
}

.card-container:hover > .card:nth-of-type(2),
.card-container:focus > .card:nth-of-type(2) {
  transform: translate(25%, 0) rotate(6deg);
}

.card-container:hover > .card:nth-of-type(3),
.card-container:focus > .card:nth-of-type(3) {
  transform: translate(-25%, 0) rotate(-6deg);
}

.card-container:hover > .card:nth-of-type(4),
.card-container:focus > .card:nth-of-type(4) {
  transform: translate(-75%, 10%) rotate(-15deg);
}

.card-buttons {
  display: flex;
  gap: 4rem;
  justify-content: center;
  margin-bottom: 2rem;
}

.card-buttons button {
  display: block;
  border-radius: 2rem;
  border: none;
  background-color: rgba(var(--darkest-color), 0.75);
  cursor: pointer;
}
.card-buttons button i {
  font-size: 3rem;
  color: rgb(var(--lightest-color));
  padding: 1rem;
  transition: transform 0.5s, color 0.5s;
}

.card-buttons button:hover,
.card-buttons button:focus-visible {
  background-color: rgba(var(--lighter-main), 0.75);
}

#get-previous-card:hover i,
#get-previous-card:focus-visible i {
  transform: translateX(-10%);
  color: var(--theme-color);
}

#get-next-card:hover i,
#get-next-card:focus-visible i {
  transform: translateX(10%);
  color: var(--theme-color);
}

.project-links {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-auto-rows: 1fr;
  padding: 1rem;
  gap: 2rem;
}

.project-link a {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  text-align: left;
  padding: 2rem;
  background-color: rgba(var(--darkest-color), 0.75);
  border-radius: 1rem;
  text-decoration: none;
  color: rgb(var(--lightest-color));
  height: 100%;
}

.project-link i {
  font-size: 2rem;
}

.project-link p {
  font-size: 1rem;
  color: rgba(var(--lightest-color), 0.75);
}

.project-link h3 {
  font-size: 1.2rem;
}

.project-link a:hover,
.project-link a:focus {
  background-color: rgba(var(--lighter-main), 0.75);
}

.color-changer {
  color: rgb(var(--lightest-color));
  text-align: center;
}

.color-changer ul {
  display: flex;
  justify-content: space-evenly;
  margin-top: 0.5rem;
}

.color {
  display: block;
  padding: 1rem;
  border: none;
  border-radius: 100%;
  cursor: pointer;
}

.color:nth-child(1) {
  background-color: hsl(272, 100%, 64%);
}
.color:nth-child(2) {
  background-color: hsl(0, 100%, 64%);
}
.color:nth-child(3) {
  background-color: hsl(107, 68%, 43%);
}
.color:nth-child(4) {
  background-color: hsl(207, 100%, 64%);
}
.color:nth-child(5) {
  background-color: hsl(48, 85%, 53%);
}

@keyframes bounceIn {
  0% {
    opacity: 0;
    transform: translateY(50%);
  }
  100% {
    opacity: 100%;
  }
}

@media (min-width: 1200px) {
  footer {
    flex-direction: row;
  }

  .home-container {
    display: flex;
    flex-direction: row;
  }

  .abilities {
    grid-template-columns: repeat(1, 1fr);
  }

  .about-container {
    flex-direction: row;
  }

  .skill-bar-container {
    grid-template-columns: 1fr;
    width: 100%;
  }

  .project-links {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 1000px) {
  .skills {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (max-width: 800px) {
  * {
    font-size: 16px;
  }

  body {
    grid-template-areas: "header" "main" "main" "footer";
    grid-template-columns: 1fr;
  }

  header nav ul {
    grid-template-columns: repeat(4, 1fr);
  }

  header .nav-link {
    border: none;
    border-left: 2px solid rgb(var(--darker-main));
  }

  header .nav-link:first-child {
    border: none;
  }

  .abilities {
    grid-template-columns: repeat(1, 1fr);
  }

  .skill-bar-container {
    grid-template-columns: 1fr;
  }

  .about-me {
    flex-direction: column;
  }

  .card-container {
    height: 60vw;
  }

  .card {
    width: 35vw;
  }
}

@media (max-width: 500px) {
  * {
    font-size: 14px;
  }

  header nav ul,
  footer nav ul {
    grid-template-columns: repeat(2, 1fr);
  }

  .nav-link:nth-child(3) {
    border-left: none;
  }
}

